# seffro-logger

./: .cruft.json  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
src/: __init__.py  __main__.py  config.py
