[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "seffro-logger"
description = "Archives messages of a dude, who has autodelete"
version = "0.1.0"
license = "AGPL3"
authors = []
readme = "README.md"
packages = [ { include = "src" } ]


[tool.poetry.dependencies]
python = "~3.12"

hikari = "2.0.0.dev125"


[tool.poetry.group.make.dependencies]
black = "~23"
isort = "~5.12"
pycln = "~2.4"
cruft = "~2.15"
lice = "~0.6"  # for generating template

pre-commit = "~3.5"


[tool.poetry.group.typing.dependencies]
mypy = "~1.7"


[tool.poetry.group.github_hooks]
optional = true

[tool.poetry.group.github_hooks.dependencies]
requests = "~2.31"
GitPython = "~3.1"


[tool.poetry.group.docker]
optional = true

[tool.poetry.group.docker.dependencies]
dumb-init = "~1.2"


[tool.black]
line-length = 120
target-version = ['py38']
